# CompilerAutotuning

./: .gitignore  CMakeLists.txt  rllib_run.py  rllib_run_DQN.py  rllib_run_DQN_GNN.py  rllib_run_DQN_MLP.py  rllib_run_MLP.py  rllib_run_PPO.py  run.py
AdaptRLlib/custom_model/: GCN_DQN.py  GCN_PPO.py
AdaptRLlib/env/LLVMEnv/: GNNLLVMEnv.py  LLVMEnv.py
Strategy/: common.py
Strategy/RL_strategy/: CompilerEnv.py  expolor.py  train.py
Strategy/RL_strategy/actionspace/: common.py  filter_action_space.py  make_action.py
Strategy/RL_strategy/actionspace/CompilerGymLLVMv0/: actions.py
Strategy/RL_strategy/actionspace/llvm10/: actions.py
Strategy/RL_strategy/actionspace/llvm14/: ActionHeaders.h  actions.py
Strategy/RL_strategy/actionspace/llvm16/: ActionSwitch.h
Strategy/RL_strategy/agents/: DQN.py
Strategy/RL_strategy/envUtility/: common.py  config.py  extract_passes_from_llvm_source_tree.py  make_action_space_genfiles.py
Strategy/RL_strategy/envUtility/llvm10/: ActionEnum.h  ActionSwitch.h
Strategy/RL_strategy/envUtility/llvm14/: ActionEnum.h  ActionSwitch.h  flag_descriptions.txt  flags.txt
Strategy/RL_strategy/envUtility/llvm16/: actions.py
Strategy/RL_strategy/model/: GCN.py  GRNN.py  MLP.py  TGCN.py  Transformer.py
Strategy/RL_strategy/obsUtility/: Autophase.py  CMakeLists.txt  IR2Vec.py  InstCount.py
Strategy/RL_strategy/obsUtility/Autophase/: Autophase.cc  CMakeLists.txt  compute_autophase.cc
Strategy/RL_strategy/obsUtility/InstCount/: CMakeLists.txt  InstCount.cc  InstCount.h  PrintInstCountFeatureNames.cc
Strategy/RL_strategy/utility/: replay_buffer.py  torchUtils.py
rllib_example/: GCN.py  GCN_DQN.py  env.py
